--- a/index.html
+++ b/index.html
@@ -125,7 +125,8 @@ a:hover{color:var(--sky)}
 
 /* COUNTRIES */
 .countries-grid{display:flex;flex-wrap:wrap;gap:.625rem;justify-content:center}
-.country-pill{display:inline-flex;align-items:center;gap:.375rem;padding:.5rem .875rem;border-radius:8px;font-size:.8rem;font-weight:600;border:1px solid rgba(255,255,255,.08);transition:all .2s}
+.country-pill{display:inline-flex;align-items:center;gap:.5rem;padding:.5rem .875rem;border-radius:8px;font-size:.8rem;font-weight:600;border:1px solid rgba(255,255,255,.08);transition:all .2s}
+.country-pill img{width:20px;height:15px;border-radius:2px;object-fit:cover}
 .country-pill:hover{transform:translateY(-1px)}
 .country-pill.enriched{background:rgba(16,185,129,.08);border-color:rgba(16,185,129,.2);color:var(--verified)}
 .country-pill.vies{background:rgba(59,130,246,.06);border-color:rgba(59,130,246,.15);color:var(--electric)}
@@ -146,7 +147,7 @@ a:hover{color:var(--sky)}
 .demo-samples{padding:.75rem 1.5rem;border-bottom:1px solid rgba(255,255,255,.06);display:flex;gap:.5rem;flex-wrap:wrap}
 .demo-sample{padding:.25rem .625rem;border-radius:6px;font-size:.75rem;font-family:var(--mono);background:rgba(255,255,255,.05);color:var(--muted);cursor:pointer;border:1px solid transparent;transition:all .2s}
 .demo-sample:hover{border-color:rgba(255,255,255,.15);color:#fff}
-.demo-output{padding:1.5rem;min-height:200px;font-family:var(--mono);font-size:.8rem;line-height:1.7;white-space:pre-wrap;word-break:break-word;background:var(--surface);color:#1E293B;border-radius:0 0 16px 16px}
+.demo-output{padding:1.5rem;min-height:200px;font-family:var(--mono);font-size:.8rem;line-height:1.7;white-space:pre-wrap;word-break:break-word;background:var(--surface);color:#1E293B;border-radius:0 0 16px 16px;text-align:left}
 .demo-output .demo-cursor{display:inline-block;width:8px;height:14px;background:var(--accent);animation:blink 1s infinite}
 @keyframes blink{0%,50%{opacity:1}51%,100%{opacity:0}}
 
@@ -519,34 +520,34 @@ company = client.<span class="fn">lookup</span>(<span class="str">"PT502011378"<
       <div class="legend-item"><div class="legend-dot blue"></div> VIES validation</div>
     </div>
     <div class="countries-grid">
-      <div class="country-pill enriched">🇵🇹 Portugal</div>
-      <div class="country-pill enriched">🇬🇧 United Kingdom</div>
-      <div class="country-pill enriched">🇩🇰 Denmark</div>
-      <div class="country-pill enriched">🇳🇴 Norway</div>
-      <div class="country-pill enriched">🇫🇮 Finland</div>
-      <div class="country-pill enriched">🇪🇪 Estonia</div>
-      <div class="country-pill enriched">🇵🇱 Poland</div>
-      <div class="country-pill enriched">🇨🇿 Czech Republic</div>
-      <div class="country-pill vies">🇩🇪 Germany</div>
-      <div class="country-pill vies">🇫🇷 France</div>
-      <div class="country-pill vies">🇮🇹 Italy</div>
-      <div class="country-pill vies">🇪🇸 Spain</div>
-      <div class="country-pill vies">🇳🇱 Netherlands</div>
-      <div class="country-pill vies">🇧🇪 Belgium</div>
-      <div class="country-pill vies">🇦🇹 Austria</div>
-      <div class="country-pill vies">🇮🇪 Ireland</div>
-      <div class="country-pill vies">🇸🇪 Sweden</div>
-      <div class="country-pill vies">🇷🇴 Romania</div>
-      <div class="country-pill vies">🇭🇺 Hungary</div>
-      <div class="country-pill vies">🇬🇷 Greece</div>
-      <div class="country-pill vies">🇧🇬 Bulgaria</div>
-      <div class="country-pill vies">🇭🇷 Croatia</div>
-      <div class="country-pill vies">🇸🇰 Slovakia</div>
-      <div class="country-pill vies">🇱🇹 Lithuania</div>
-      <div class="country-pill vies">🇱🇻 Latvia</div>
-      <div class="country-pill vies">🇸🇮 Slovenia</div>
-      <div class="country-pill vies">🇱🇺 Luxembourg</div>
-      <div class="country-pill vies">🇨🇾 Cyprus</div>
+      <div class="country-pill enriched"><img src="https://flagcdn.com/20x15/pt.png" alt="PT"> Portugal</div>
+      <div class="country-pill enriched"><img src="https://flagcdn.com/20x15/gb.png" alt="GB"> United Kingdom</div>
+      <div class="country-pill enriched"><img src="https://flagcdn.com/20x15/dk.png" alt="DK"> Denmark</div>
+      <div class="country-pill enriched"><img src="https://flagcdn.com/20x15/no.png" alt="NO"> Norway</div>
+      <div class="country-pill enriched"><img src="https://flagcdn.com/20x15/fi.png" alt="FI"> Finland</div>
+      <div class="country-pill enriched"><img src="https://flagcdn.com/20x15/ee.png" alt="EE"> Estonia</div>
+      <div class="country-pill enriched"><img src="https://flagcdn.com/20x15/pl.png" alt="PL"> Poland</div>
+      <div class="country-pill enriched"><img src="https://flagcdn.com/20x15/cz.png" alt="CZ"> Czech Republic</div>
+      <div class="country-pill vies"><img src="https://flagcdn.com/20x15/de.png" alt="DE"> Germany</div>
+      <div class="country-pill vies"><img src="https://flagcdn.com/20x15/fr.png" alt="FR"> France</div>
+      <div class="country-pill vies"><img src="https://flagcdn.com/20x15/it.png" alt="IT"> Italy</div>
+      <div class="country-pill vies"><img src="https://flagcdn.com/20x15/es.png" alt="ES"> Spain</div>
+      <div class="country-pill vies"><img src="https://flagcdn.com/20x15/nl.png" alt="NL"> Netherlands</div>
+      <div class="country-pill vies"><img src="https://flagcdn.com/20x15/be.png" alt="BE"> Belgium</div>
+      <div class="country-pill vies"><img src="https://flagcdn.com/20x15/at.png" alt="AT"> Austria</div>
+      <div class="country-pill vies"><img src="https://flagcdn.com/20x15/ie.png" alt="IE"> Ireland</div>
+      <div class="country-pill vies"><img src="https://flagcdn.com/20x15/se.png" alt="SE"> Sweden</div>
+      <div class="country-pill vies"><img src="https://flagcdn.com/20x15/ro.png" alt="RO"> Romania</div>
+      <div class="country-pill vies"><img src="https://flagcdn.com/20x15/hu.png" alt="HU"> Hungary</div>
+      <div class="country-pill vies"><img src="https://flagcdn.com/20x15/gr.png" alt="GR"> Greece</div>
+      <div class="country-pill vies"><img src="https://flagcdn.com/20x15/bg.png" alt="BG"> Bulgaria</div>
+      <div class="country-pill vies"><img src="https://flagcdn.com/20x15/hr.png" alt="HR"> Croatia</div>
+      <div class="country-pill vies"><img src="https://flagcdn.com/20x15/sk.png" alt="SK"> Slovakia</div>
+      <div class="country-pill vies"><img src="https://flagcdn.com/20x15/lt.png" alt="LT"> Lithuania</div>
+      <div class="country-pill vies"><img src="https://flagcdn.com/20x15/lv.png" alt="LV"> Latvia</div>
+      <div class="country-pill vies"><img src="https://flagcdn.com/20x15/si.png" alt="SI"> Slovenia</div>
+      <div class="country-pill vies"><img src="https://flagcdn.com/20x15/lu.png" alt="LU"> Luxembourg</div>
+      <div class="country-pill vies"><img src="https://flagcdn.com/20x15/cy.png" alt="CY"> Cyprus</div>
     </div>
   </div>
 </section>
